--- a/refreshed/styles/screen/variables.less
+++ b/refreshed/styles/screen/variables.less
@@ -87,7 +87,7 @@ appears above the dropdown and thus is not underneath its drop shadow */
 
 /***************************** sidebar properties *****************************/
 
-@sidebar-header-padding: 0.25em;
+@sidebar-heading-padding: 0.25em;
 @sidebar-section-padding-bottom: 0.25em;
 
 @sidebar-ul-padding-top: 0.25em;
