--- a/refreshed/mediawiki/skinning.interface.css
+++ b/refreshed/mediawiki/skinning.interface.css
@@ -20,3 +20,37 @@
 	padding: 0;
 	border: 0;
 }
+
+#mw-normal-catlinks::before,
+.toctitle h2::before {
+	content: '';
+	display: inline-block;
+	vertical-align: text-bottom;
+	background-position: center center;
+	background-size: 100% 100%;
+	background-repeat: no-repeat;
+	margin-right: 0.3em;
+}
+
+#mw-normal-catlinks::before {
+	width: 1em;
+	height: 1em;
+}
+
+.toctitle h2::before {
+	width: 1.2em;
+	height: 1.2em;
+}
+
+/* category background images are specified in mixins-public.less so they can
+use variables */
+
+[dir = ltr] .toctitle h2::before {
+	/* ooui-icon-stripeToC-ltr */
+	background-image: url( data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cpath d='M5 3h14v2H5zm0 6h14v2H5zm0 6h14v2H5zM1 3h2v2H1zm0 6h2v2H1zm0 6h2v2H1z'/%3E%3C/svg%3E );
+}
+
+[dir = rtl] .toctitle h2::before {
+	/* ooui-icon-stripeToC-rtl */
+	background-image: url( data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20'%3E%3Cpath d='M1 3h14v2H1zm0 6h14v2H1zm0 6h14v2H1zM17 3h2v2h-2zm0 6h2v2h-2zm0 6h2v2h-2z'/%3E%3C/svg%3E );
+}
