--- a/refreshed/styles/screen/common.less
+++ b/refreshed/styles/screen/common.less
@@ -15,19 +15,7 @@ body {
 /* Unfortunately, SVGs inside anchor colored with :visited do not inherit their
 color normally (tested in Chrome, Safari, Firefox). As such, we're removing
 :visited styles from anchors that have SVGs, as otherwise the SVG would be a
-different color from the rest of the link.*/
-
-.refreshed-dropdown-tray a,
-#refreshed-toolbox a,
-.catlinks a {
-	color: #0645ad;
-}
-
-.refreshed-dropdown-tray li.new a,
-#refreshed-toolbox .new a,
-.catlinks a.new {
-	color: #ba0000;
-}
+different color from the rest of the link. */
 
 /*******************************************************************************
 **************************** DROPDOWNS/COLLAPSIBLES ****************************
@@ -236,7 +224,7 @@ sidebar button (in #header-wrapper) and the sidebar (in #sidebar-wrapper). */
 }
 
 #sidebar-toggler-checkbox:checked ~ #sidebar-wrapper {
-	left: 0;
+	transform: translateX(0);
 	/* only apply the box shadow when the sidebar is opened so the shadow doesn't
 	appear on the edge of the screen when the sidebar is closed (just off the edge
 	of the screen) */
@@ -366,10 +354,10 @@ opposed to the sidebar), space them out */
 }
 
 .refreshed-logo-other {
-  .site-navigation-logo-img,
-  .site-navigation-logo-text {
-    display: inline-block;
-  }
+	.site-navigation-logo-img,
+	.site-navigation-logo-text {
+		display: inline-block;
+	}
 }
 
 #site-navigation-header-dropdown {
@@ -459,6 +447,13 @@ the explore button which is at the top of it. */
 	height: 100%;
 	.flex-display( inline-flex );
 	.flex-align-items( center );
+
+	li {
+		margin: 0;
+		margin-left: 0.5em;
+		padding: 0;
+		padding-top: 0.75em;
+	}
 }
 
 .mw-echo-ui-overlay {
@@ -507,7 +502,7 @@ the explore button which is at the top of it. */
 
 /* default search bar text */
 .mixin-set-searchInput-placeholder-styles( {
-  color: @search-placeholder-text-font-color;
+	color: @search-placeholder-text-font-color;
 	font-weight: normal;
 } );
 
@@ -684,38 +679,6 @@ https://css-tricks.com/flexbox-truncated-text/ */
 	.inline-tool-text {
 		display: none;
 	}
-}
-
-[dir = ltr] {
-	#ca-watch,
-	#ca-unwatch {
-		.loading,
-		a:hover {
-			/* ooui-icon-halfStar-ltr */
-			background-image: url( data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20' fill='%230645ad'%3E%3Cpath d='M20 7h-7L10 .5 7 7H0l5.46 5.47-1.64 7 6.18-3.7 6.18 3.73-1.63-7zm-10 6.9V4.6l1.9 3.9h4.6l-3.73 3.4 1 4.28z'/%3E%3C/svg%3E );
-		}
-	}
-}
-
-[dir = rtl] {
-	#ca-watch,
-	#ca-unwatch {
-		.loading,
-		a:hover {
-			/* ooui-icon-halfStar-rtl */
-			background-image: url( data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20' fill='%230645ad'%3E%3Cpath d='M5.4 12.5l-1.6 7 6.2-3.7 6.2 3.7-1.6-7L20 7h-7L10 .5 7 7H0l5.4 5.5zm.8 3.7l1-4.3-3.7-3.4h4.6L10 4.6v9.3l-3.8 2.3z'/%3E%3C/svg%3E );
-		}
-	}
-}
-
-#ca-unwatch a {
-	/* ooui-icon-unStar */
-	background-image: url( data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20' fill='%230645ad'%3E%3Cpath d='M20 7h-7L10 .5 7 7H0l5.46 5.47-1.64 7 6.18-3.7 6.18 3.73-1.63-7z'/%3E%3C/svg%3E%0A );
-}
-
-#ca-watch a {
-	/* ooui-icon-star */
-	background-image: url( data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' width='20' height='20' viewBox='0 0 20 20' fill='%230645ad'%3E%3Cpath d='M20 7h-7L10 .5 7 7H0l5.46 5.47-1.64 7 6.18-3.7 6.18 3.73-1.63-7zm-10 6.9l-3.76 2.27 1-4.28L3.5 8.5h4.61L10 4.6l1.9 3.9h4.6l-3.73 3.4 1 4.28z'/%3E%3C/svg%3E%0A );
 }
 
 /* reset CSS of feed links */
