--- a/refreshed/styles/screen/config-default.less
+++ b/refreshed/styles/screen/config-default.less
@@ -13,6 +13,8 @@ some extra advanced configuration. */
 @header-button-focus-background: royalblue;
 @header-button-hover-background: midnightblue;
 @header-button-active-background: @header-button-hover-background;
+@toolbox-main-link-color: #0645ad;
+@toolbox-main-link-color-new: #ba0000;
 @toolbox-dropdown-button-background: #eee;
 @toolbox-dropdown-button-not-focus-color: @content-font-color;
 @toolbox-dropdown-button-focus-background: @header-button-focus-background;
@@ -44,136 +46,148 @@ some extra advanced configuration. */
 *******************************************************************************/
 
 @media screen {
-  body {
-    /* background for the page */
-    background: @body-background;
-    /* font family for the page */
-    font-family: @header-sidebar-footer-font-stack;
-  }
+	body {
+		/* background for the page */
+		background: @body-background;
+		/* font family for the page */
+		font-family: @header-sidebar-footer-font-stack;
+	}
 
-  #header-wrapper,
-  #sidebar-wrapper,
-  #footer-wrapper {
-    /* font color for the header, sidebar, and footer */
-    color: @header-sidebar-footer-font-color;
-  }
+	#header-wrapper,
+	#sidebar-wrapper,
+	#footer-wrapper {
+		/* font color for the header, sidebar, and footer */
+		color: @header-sidebar-footer-font-color;
+	}
 
-  #header-wrapper {
-    /* background for the header */
-    background: @header-background;
-  }
+	#header-wrapper {
+		/* background for the header */
+		background: @header-background;
+	}
 
-  /* "header buttons" (the buttons in the header, the wiki logo button in the
-  sidebar in the small layout, and arrow button next to that logo) */
-  .mixin-set-header-button-styles( {
-    /* background for a header button */
-    background: @header-button-background;
-  } );
-  /* :focus styles */
-  .mixin-set-header-button-styles-focus( {
-    /* background for a header button when it's focused */
-    background: @header-button-focus-background;
-  } );
-  /* :hover styles */
-  .mixin-set-header-button-styles-hover( {
-    /* background for a header button when it's hovered over */
-    background: @header-button-hover-background;
-  } );
-  /* :active styles */
-  .mixin-set-header-button-styles-active( {
-    /* background for a header button when it's active */
-    background: @header-button-active-background;
-  } );
+	/* "header buttons" (the buttons in the header, the wiki logo button in the
+	sidebar in the small layout, and arrow button next to that logo) */
+	.mixin-set-header-button-styles( {
+		/* background for a header button */
+		background: @header-button-background;
+	} );
+	/* :focus styles */
+	.mixin-set-header-button-styles-focus( {
+		/* background for a header button when it's focused */
+		background: @header-button-focus-background;
+	} );
+	/* :hover styles */
+	.mixin-set-header-button-styles-hover( {
+		/* background for a header button when it's hovered over */
+		background: @header-button-hover-background;
+	} );
+	/* :active styles */
+	.mixin-set-header-button-styles-active( {
+		/* background for a header button when it's active */
+		background: @header-button-active-background;
+	} );
 
-  /* sidebar buttons (the buttons for the header categories that are in the
-  sidebar in the small layout) */
-  .mixin-set-sidebar-button-styles( {
-    /* background for a sidebar button */
-    background: @header-button-background;
-  } );
-  /* :focus styles */
-  .mixin-set-sidebar-button-styles-focus( {
-    /* background for a sidebar button when it's focused */
-    background: @header-button-focus-background;
-  } );
-  /* :hover styles */
-  .mixin-set-sidebar-button-styles-hover( {
-    /* background for a sidebar button when it's hovered over */
-    background: @header-button-hover-background;
-  } );
-  /* :active styles */
-  .mixin-set-sidebar-button-styles-active( {
-    /* background for a sidebar button when it's active */
-    background: @header-button-active-background;
-  } );
+	/* sidebar buttons (the buttons for the header categories that are in the
+	sidebar in the small layout) */
+	.mixin-set-sidebar-button-styles( {
+		/* background for a sidebar button */
+		background: @header-button-background;
+	} );
+	/* :focus styles */
+	.mixin-set-sidebar-button-styles-focus( {
+		/* background for a sidebar button when it's focused */
+		background: @header-button-focus-background;
+	} );
+	/* :hover styles */
+	.mixin-set-sidebar-button-styles-hover( {
+		/* background for a sidebar button when it's hovered over */
+		background: @header-button-hover-background;
+	} );
+	/* :active styles */
+	.mixin-set-sidebar-button-styles-active( {
+		/* background for a sidebar button when it's active */
+		background: @header-button-active-background;
+	} );
 
-  /* the button that opens the tools dropdown in the toolbox */
-  .mixin-set-toolbox-dropdown-button-styles({
-    background: @toolbox-dropdown-button-background;
-    color: @toolbox-dropdown-button-not-focus-color;
-  });
-  .mixin-set-toolbox-dropdown-button-styles-focus({
-    background: @toolbox-dropdown-button-focus-background;
-    color: @toolbox-dropdown-button-focus-color;
-  });
-  .mixin-set-toolbox-dropdown-button-styles-hover({
-    background: @toolbox-dropdown-button-hover-background;
-    color: @toolbox-dropdown-button-not-focus-color;
-  });
-  .mixin-set-toolbox-dropdown-button-styles-active({
-    background: @toolbox-dropdown-button-active-background;
-    color: @toolbox-dropdown-button-not-focus-color;
-  });
+	/* link colors of toolbox, dropdowns, catlinks */
+	.mixin-set-refreshed-link-colors(
+			@link-color: @toolbox-main-link-color,
+			@link-color-new: @toolbox-main-link-color-new
+	);
 
-  /* set the colors of dropdown trays (for example, dropdown trays that are
-  opened by buttons in the header) */
-  /* note that @active-background-color is the background-color of links when
-  they are active (clicked on), and @font-color is the color of non-link text */
-  .mixin-set-dropdown-tray-colors(
-    @background-color: @dropdown-tray-background-color,
-    @active-background-color: @dropdown-tray-active-background-color,
-    @font-color: @dropdown-tray-font-color
-  );
+	/* the button that opens the tools dropdown in the toolbox */
+	.mixin-set-toolbox-dropdown-button-styles({
+		background: @toolbox-dropdown-button-background;
+		color: @toolbox-dropdown-button-not-focus-color;
+	});
+	.mixin-set-toolbox-dropdown-button-styles-focus({
+		background: @toolbox-dropdown-button-focus-background;
+		color: @toolbox-dropdown-button-focus-color;
+	});
+	.mixin-set-toolbox-dropdown-button-styles-hover({
+		background: @toolbox-dropdown-button-hover-background;
+		color: @toolbox-dropdown-button-not-focus-color;
+	});
+	.mixin-set-toolbox-dropdown-button-styles-active({
+		background: @toolbox-dropdown-button-active-background;
+		color: @toolbox-dropdown-button-not-focus-color;
+	});
 
-  .refreshed-collapsible-tray {
-    /* set the colors of collapsible trays (for example, the site navigation
-    tray in the sidebar of the small layout) */
-    background-color: @header-button-active-background;
-  }
+	/* set the colors of dropdown trays (for example, dropdown trays that are
+	opened by buttons in the header) */
+	/* note that @active-background-color is the background-color of links when
+	they are active (clicked on), and @font-color is the color of non-link text */
+	.mixin-set-dropdown-tray-colors(
+		@background-color: @dropdown-tray-background-color,
+		@active-background-color: @dropdown-tray-active-background-color,
+		@font-color: @dropdown-tray-font-color
+	);
 
-  #content-wrapper {
-    /* background-color for the page content */
-    background-color: @content-background-color;
-    /* font family for the page content */
-    font-family: @content-font-stack;
-    /* font color for the page content */
-    color: @content-font-color;
-  }
+	.refreshed-collapsible-tray {
+		/* set the colors of collapsible trays (for example, the site navigation
+		tray in the sidebar of the small layout) */
+		background-color: @header-button-active-background;
+	}
 
-  .firstHeading,
-  .mw-headline {
-    /* font color for headings */
-    color: @content-font-color;
-  }
+	#content-wrapper {
+		/* background-color for the page content */
+		background-color: @content-background-color;
+		/* font family for the page content */
+		font-family: @content-font-stack;
+		/* font color for the page content */
+		color: @content-font-color;
+	}
+
+	.firstHeading,
+	.mw-headline,
+	#mw-content-text h1,
+	#mw-content-text h2,
+	#mw-content-text h3,
+	#mw-content-text h4,
+	#mw-content-text h5,
+	#mw-content-text h6 {
+		/* font color for headings */
+		color: @content-font-color;
+	}
 }
 /*******************************************************************************
 ***************************** STYLES FOR BIG LAYOUT ****************************
 *******************************************************************************/
 
 .mixin-big-layout-styles( {
-  /* height for the header */
-  .mixin-set-header-height( @height: @big-header-height );
+	/* height for the header */
+	.mixin-set-header-height( @height: @big-header-height );
 
-  /* width for the sidebar */
-  .mixin-set-sidebar-width-big-layout( @width: @big-sidebar-width );
+	/* width for the sidebar */
+	.mixin-set-sidebar-width-big-layout( @width: @big-sidebar-width );
 
-  /* how far away the content is from the edge of the viewport on the side
-  opposite the side that the sidebar is on */
-  .mixin-set-content-margin-sidebar-opposite-side( @margin: @big-content-margin-right );
+	/* how far away the content is from the edge of the viewport on the side
+	opposite the side that the sidebar is on */
+	.mixin-set-content-margin-sidebar-opposite-side( @margin: @big-content-margin-right );
 
-  /* make the toolbox stick to the top when you scroll down;
-  specify its background-color when stuck */
-  .mixin-use-refreshed-toolbox-sticky( @background-color: @content-background-color );
+	/* make the toolbox stick to the top when you scroll down;
+	specify its background-color when stuck */
+	.mixin-use-refreshed-toolbox-sticky( @background-color: @content-background-color );
 } );
 
 /*******************************************************************************
@@ -181,20 +195,20 @@ some extra advanced configuration. */
 *******************************************************************************/
 
 .mixin-medium-layout-styles( {
-  /* height for the header */
-  .mixin-set-header-height( @height: @medium-header-height );
+	/* height for the header */
+	.mixin-set-header-height( @height: @medium-header-height );
 
-  /* width for the sidebar */
-  .mixin-set-sidebar-width-medium-layout( @width: @medium-sidebar-width );
+	/* width for the sidebar */
+	.mixin-set-sidebar-width-medium-layout( @width: @medium-sidebar-width );
 
-  #sidebar-wrapper {
-    /* background for the sidebar */
-    background: @body-background;
-  }
+	#sidebar-wrapper {
+		/* background for the sidebar */
+		background: @body-background;
+	}
 
-  /* make the toolbox stick to the top when you scroll down;
-  specify its background-color when stuck */
-  .mixin-use-refreshed-toolbox-sticky( @background-color: @content-background-color );
+	/* make the toolbox stick to the top when you scroll down;
+	specify its background-color when stuck */
+	.mixin-use-refreshed-toolbox-sticky( @background-color: @content-background-color );
 } );
 
 /*******************************************************************************
@@ -202,16 +216,16 @@ some extra advanced configuration. */
 *******************************************************************************/
 
 .mixin-small-layout-styles( {
-  /* height for the header */
-  .mixin-set-header-height( @height: @small-header-height );
+	/* height for the header */
+	.mixin-set-header-height( @height: @small-header-height );
 
-  /* width for the sidebar */
-  .mixin-set-sidebar-width-small-layout( @width: @small-sidebar-width );
+	/* width for the sidebar */
+	.mixin-set-sidebar-width-small-layout( @width: @small-sidebar-width );
 
-  #sidebar-wrapper {
-    /* background for the sidebar */
-    background: @body-background;
-  }
+	#sidebar-wrapper {
+		/* background for the sidebar */
+		background: @body-background;
+	}
 } );
 
 /*******************************************************************************
