--- a/refreshed/styles/screen/big.less
+++ b/refreshed/styles/screen/big.less
@@ -61,7 +61,7 @@
 	}
 
 	.mw-indicator {
-		display: inline;
+		display: inline-block;
 	}
 
 	/*****************************************************************************
