--- a/refreshed/styles/screen/medium.less
+++ b/refreshed/styles/screen/medium.less
@@ -61,7 +61,7 @@
 	}
 
 	.mw-indicator {
-		display: inline;
+		display: inline-block;
 	}
 
 	/*****************************************************************************
