Improvements for the printable version
* Don't underline *all* the links ever
** In printable view, [https://foo.example.com/Bar Asdfqwerty] gets rendered as "Asdfqwerty (https://foo.example.com/Bar)"; previously the "Asdfqwerty" part as well would be underlined, now it isn't *but* the space between "Asdfqwerty" and the URL kinda...is underlined (TODO: how to make it not underlined?)
* Hide the "This page was last edited..." text, not relevant for a printed page IMHO
* Hide powered by MediaWiki icon + the copyright icon (if any); again, not relevant

Change-Id: Ia37cb1971cd8cafb5e07acb48f30e21afc68b14d

--- a/refreshed/styles/print/print.less
+++ b/refreshed/styles/print/print.less
@@ -14,8 +14,8 @@ body {
 }
 
 /* underline links to differentiate between regular text */
-a,
-a.external {
+a:after,
+a.external:after {
 	font-weight: bold;
 	text-decoration: underline !important;
 }
@@ -63,6 +63,15 @@ a.external {
 	font-size: 0.8em;
 }
 
-#footer-row-places li {
-	display: inline-block;
+/* This is (hopefully) the "This page was last edited..." text
+ * Confusingly, though, the footer text things don't have IDs so we can't be 100% sure
+ * The other item w/ this class is the copyright text and that we _do_ want to show
+ */
+.footer-row-item:first-of-type {
+	display: none;
+}
+
+#footer-row-places,
+#footer-row-icons {
+	display: none;
 }
