Rename #bodyContent to #content for improved VisualEditor support
Needed to keep the page-specific content actions (both links and the drop-down menu items) clickable while VE is active.

Change-Id: I5291cf928a12008a331ce700d03a3a1a22081d0f

--- a/refreshed/styles/screen/common.less
+++ b/refreshed/styles/screen/common.less
@@ -700,7 +700,7 @@ a.feedlink {
 	margin-left: 2em;
 }
 
-#bodyContent {
+#content {
 	line-height: 1.5em;
 	font-size: 0.875em;
 	word-wrap: break-word;
