Remove the use of .box-shadow mixin
Bug: T277819
Change-Id: I2757cb020362570520a1c173f602119eee081ea7

--- a/refreshed/styles/screen/mixins-private.less
+++ b/refreshed/styles/screen/mixins-private.less
@@ -83,7 +83,7 @@ clicked) */
 		padding: inherit;
 		height: inherit;
 		z-index: initial;
-		.box-shadow( none );
+		box-shadow: none;
 		display: inline-block;
 
 		/* ensure .searchButton is positioned relative to this */
