Use box-sizing rule instead of mixin
Per https://phabricator.wikimedia.org/T306488

Change-Id: I427e5896f20f7e2c0689e4b120838df9a5e06a1e

--- a/refreshed/styles/screen/common.less
+++ b/refreshed/styles/screen/common.less
@@ -46,7 +46,7 @@ different color from the rest of the link. */
 	vertical-align: middle;
 	height: 100%;
 	margin-left: 0.3em;
-	.box-sizing( border-box );
+	box-sizing: border-box;
 	.flex-display( inline-flex );
 	.flex-align-items( center );
 }
@@ -174,7 +174,7 @@ sidebar button (in #header-wrapper) and the sidebar (in #sidebar-wrapper). */
 	.transition( opacity 0.1s ease );
 	/* include the box-sizing so we can be confident that jQuery's outerHeight()
 	matches the actual height of the header */
-	.box-sizing( border-box );
+	box-sizing: border-box;
 }
 
 #explore-dropdown-tray .refreshed-modal-background {
@@ -236,7 +236,7 @@ sidebar button (in #header-wrapper) and the sidebar (in #sidebar-wrapper). */
 
 .refreshed-collapsible-button {
 	width: 100%;
-	.box-sizing( border-box );
+	box-sizing: border-box;
 }
 
 .header-category-collapsible-button {
@@ -476,7 +476,7 @@ the explore button which is at the top of it. */
 }
 
 #header-search-dropdown-tray {
-	.box-sizing( border-box );
+	box-sizing: border-box;
 }
 
 #searchInput {
@@ -491,7 +491,7 @@ the explore button which is at the top of it. */
 	/* prevent Safari from styling input box */
 	-webkit-appearance: none;
 	width: 100%;
-	.box-sizing( border-box );
+	box-sizing: border-box;
 
 	/* prevent Safari from styling input box (adding text indent)
 	per https://stackoverflow.com/a/11128262 */
@@ -677,7 +677,7 @@ https://css-tricks.com/flexbox-truncated-text/ */
 		background-repeat: no-repeat;
 		margin-bottom: 0;
 		vertical-align: middle;
-		.box-sizing( border-box );
+		box-sizing: border-box;
 	}
 
 	.inline-tool-text {
