--- a/refreshed/styles/screen/small.less
+++ b/refreshed/styles/screen/small.less
@@ -110,7 +110,7 @@
 		font-size: 1.25em;
 		line-height: 1.2em;
 		width: 100%;
-		.box-sizing( border-box );
+		box-sizing: border-box;
 	}
 
 	#catlinks {
